# boost-python-examples

./: .gitignore  .hgignore  .travis.yml  Brewfile  CMakeLists.txt  DCO.md  Dockerfile.ubuntu  README.md  build.sh
.github/ISSUE_TEMPLATE/: problem-report.md
01-HelloWorld/: CMakeLists.txt  hello.cpp  hello.py
02-ExposingClasses/: CMakeLists.txt  classes.cpp  classes.py
03-Constructors/: CMakeLists.txt  ctor.cpp  ctor.py
04-ClassMembers/: CMakeLists.txt  member.cpp  member.py
05-Inheritance/: CMakeLists.txt  inheritance.cpp  inheritance.py
06-VirtualFunctionsInPython/: CMakeLists.txt  virtual.cpp  virtual.py
07-Operators/: CMakeLists.txt  operators.cpp  operators.py
08-CallPolicies/: CMakeLists.txt  policies.cpp  policies.py
09-Overloading/: CMakeLists.txt  overload.cpp  overload.py
10-Embedding/: CMakeLists.txt  embedding.cpp  embedding.py  mymodule.cpp
10-ObjectInterface/: CMakeLists.txt
11-ExtractingObjects/: CMakeLists.txt
11-Iterators/: CMakeLists.txt  iterators.cpp  iterators.py
12-Embedding/: CMakeLists.txt  embedding.cpp  embedding.py  mymodule.cpp  mymodule.hpp
12-Exceptions/: CMakeLists.txt  myexceptions.cpp  myexceptions.py
13-AutoInstantiation/: CMakeLists.txt  auto_instance.cpp  auto_instance.py  myextension.cpp  myextension.hpp
13-Iterators/: CMakeLists.txt
14-Exceptions/: CMakeLists.txt  myexceptions.cpp  myexceptions.py
15-AutoInstantiation/: CMakeLists.txt  auto_instance.cpp  auto_instance.py  myextension.cpp  mymodule.cpp  mymodule.hpp
